test/domains/compilerErrors/constDomain2.chpl
const d: domain(int);
d += 5;
